<resources>
    <string name="app_name">LoadingLayoutDemo</string>
    <string name="content">content</string>
    <string name="empty">empty</string>
    <string name="error">error</string>
    <string name="loading">loading</string>
    <string name="special_jump">点击跳转至特定页面</string>
    <string name="refresh_jump">点击重新加载</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_n_no_data">tab%d暂无数据</string>
    <string name="tab_n_error">tab%d加载失败</string>
    <string name="tip_from_xml_error">tip：直接在xml中设置errorView的属性</string>
    <string name="tip_from_xml_empty">tip：直接在xml中设置emptyView的属性</string>
    <string name="set_loading_activity">SetLoadingActivity</string>
    <string name="tab_activity">TabActivity</string>
    <string name="simple_activity">SimpleActivity</string>
</resources>
