<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.victor.loadinglayoutdemo.activity.MainActivity">



        <Button
            android:id="@+id/btn_simple_activity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/simple_activity"/>

        <Button
            android:id="@+id/btn_tab_activity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tab_activity"/>

        <Button
            android:id="@+id/btn_set_activity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/set_loading_activity"/>

        <!--<Button-->
            <!--android:id="@+id/btn_loading_view"-->
            <!--android:layout_width="160dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/loading"/>-->
</LinearLayout>
