<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_simple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.victor.loadinglayoutdemo.activity.SimpleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.victor.loadinglayout.LoadingLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorView="@layout/error_view_demo2"
            app:emptyView="@layout/empty_view_demo2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/content"/>

        </com.victor.loadinglayout.LoadingLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_content_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"/>

        <Button
            android:id="@+id/btn_empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"/>

        <Button
            android:id="@+id/btn_error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"/>

        <Button
            android:id="@+id/btn_loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"/>
    </LinearLayout>

</LinearLayout>
